<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mintedtech.randomnumbergenerator.activities.MainActivity">

    <item
        android:id="@+id/menu_show_history"
        android:title="@string/show_history"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_history"
        android:title="@string/clear_history"
        android:visible="true"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        android:orderInCategory="300"
        app:showAsAction="never" />
</menu>